# Earnrewards

./: Anchor.toml
programs/rewards-program/: Cargo.toml
programs/rewards-program/src/: instruction.rs  lib.rs  state.rs  utils.rs
tests/: rewards-program.ts
